--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -150,7 +150,7 @@ body.project-show div.project-menu ul li.home a {
 } 
 
 body.project-show div.project-menu ul li.needs a {
-    background-color: #e13028;
+    background-color: #96238F;
 	padding-right:35px;
 } 
 
