--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -44,13 +44,13 @@ div.widget.project-supporters dl.summary dd.supporters {
 
 div.widget.project-supporters dl.summary dt.reached {
     margin-top: -1.5em;    
-    color: #ee4843;
+    color: #96238F;
 }
 
 div.widget.project-supporters dl.summary dd.reached {
-    background: url("../../euro/red/l.png") no-repeat scroll right center transparent;        
+    background: url("../../euro/violet/l.png") no-repeat scroll right center transparent;        
     padding-right: 30px;
-    color: #ee4843;
+    color: #96238F;
 }
 
 
@@ -155,11 +155,11 @@ div.widget.project-supporters .supporters ul li dl dd.amount {
     right: 10px;
     font-size: 18px;
     font-weight: bold;
-    color: #ee4843;
+    color: #96238F;
 }
 
 div.widget.project-supporters .supporters ul li dl dd.amount {
-    background: url("../../euro/red/m.png") no-repeat scroll right center transparent;        
+    background: url("../../euro/violet/m.png") no-repeat scroll right center transparent;        
     height: 27px;    
     line-height: 27px;
     padding-right: 22px;
@@ -347,11 +347,11 @@ div.widget.project-investors .investors ul li dl dd.amount {
     right: 10px;
     font-size: 18px;
     font-weight: normal;
-    color: #ee4843;
+    color: #96238F;
 }
 
 div.widget.project-investors .investors ul li dl dd.amount {
-    background: url("../../euro/red/s.png") no-repeat scroll right center transparent;
+    background: url("../../euro/violet/s.png") no-repeat scroll right center transparent;
     height: 20px;
     line-height: 21px;
     padding-right: 18px;
