--- a/view/css/user/widget/supporters.css
+++ b/view/css/user/widget/supporters.css
@@ -92,11 +92,11 @@ div.widget.user-supporters .supporters ul li dl dd.amount {
     right: 10px;
     font-size: 18px;
     font-weight: normal;
-    color: #ee4843;
+    color: #96238f;
 }
 
 div.widget.user-supporters .supporters ul li dl dd.amount {
-    background: url("../../euro/red/s.png") no-repeat scroll right center transparent;        
+    background: url("../../euro/violet/s.png") no-repeat scroll right center transparent;        
     height: 20px;    
     line-height: 21px;
     padding-right: 18px;
