--- a/view/css/project/widget/updates.css
+++ b/view/css/project/widget/updates.css
@@ -63,10 +63,10 @@ div.widget.project-updates > div {
 	margin: 10px  30px;
 }
 .project-updates .widget.post .gallery-image{
-	text-align:center;
+	text-align:left;
 }
 .project-updates .widget.post .gallery-image img{
-	margin: 0 auto;
+	margin: 0 18px;
 }
 .project-updates .post .comments-num{
 	float:left;
