--- a/view/css/project/widget/rewards.css
+++ b/view/css/project/widget/rewards.css
@@ -33,7 +33,12 @@ div.widget.project-rewards div.individual h4.title,
 div.widget.project-invest > div.individual ul li,
 div.widget.project-rewards > div.individual ul li,
 #rewards-summary > div.individual ul li{
-    background-color: #F5E9F4;
+    background-color: #F5E9F4;	
+}
+
+div.side div.widget.project-invest > div.individual ul li,
+div.widget.project-rewards > div.individual ul li,
+div.side #rewards-summary > div.individual ul li{
 	background-position: 10px 35px;
 }
 
@@ -226,7 +231,7 @@ div.widget.project-invest ul li div.license > a strong,
 div.widget.project-rewards ul li div.license > a strong,
 #rewards-summary ul li div.license > a strong {
     background: url("/view/css/license/license.png") no-repeat left top;
-    padding-top: 34px;
+    padding-top: 40px;
     display: block;
 }
 
