--- a/view/css/footer.css
+++ b/view/css/footer.css
@@ -86,6 +86,68 @@ div#footer div.block ul{
 	height:115px;
 	overflow:auto;
 }
+div#footer div.block ul.paginacion {
+	margin: 8px 0 0 0;
+	list-style:none;
+	padding:0px;
+	float:left;
+	height:auto;
+}
+
+div#footer div.block ul.paginacion li {
+	cursor:pointer;
+    display: block;
+    float: left;
+    overflow: hidden;
+	margin: 0px 4px 5px 4px;
+}
+
+div#footer div.block ul.paginacion li a {
+    width: 10px;
+    height: 12px;
+    margin-top: 2px;
+    background-color: #cdcdce;
+    color: #cdcdce;
+	display:block;
+}
+
+div#footer div.block ul.paginacion li a:hover {
+    background-color: #20b3b2;
+    color: #20b3b2;
+}
+
+div#footer div.block ul.paginacion li.current a {
+    background-color: #808184 !important;
+    color: #808184 !important;
+}
+
+div#slides_sponsor .slidersponsors-ctrl .next,
+div#slides_sponsor .slidersponsors-ctrl .prev {
+    width: 16px;
+    height: 16px;
+	line-height: 2000px;
+	overflow: hidden;
+	float:left;
+	margin: 8px 0 0 0;
+	cursor:pointer;
+/*	display: inline-block; */
+}
+
+div#slides_sponsor .slidersponsors-ctrl .prev {
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 0;
+}
+
+div#slides_sponsor .slidersponsors-ctrl .prev:hover {
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
+}
+
+div#slides_sponsor .slidersponsors-ctrl .next{
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
+}
+
+div#slides_sponsor .slidersponsors-ctrl .next:hover {
+	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
+}
 
 div#footer div.block ul li{
 	line-height:12px;
@@ -170,12 +232,22 @@ div#footer div.social li.rss a {
 
 
 /*particular de apoyo social*/
+div#footer div.sponsors div.slides_container{
+	width:165px;
+	height:148px;
+	display:none;
+	float:left;
+	margin: 10px 0 0 0;
+}
 div#footer div.sponsors{
-	width:188px !important; /*+15 left padding = w 125*/
+	margin:0px;
+	width:165px;
+	height:148px;
+	display:block;
 }
 
-div#footer div.sponsors > .sponsor {
-    height: 100px;
+div#footer div.sponsors > .slides_control > .sponsor {
+    height: 148px;
     margin: 20px 10px 0;
 }
 
