Tareas maquetacion * enlaces al usuario en los mensajes * errores en el formulario

--- a/view/css/project/widget/messages.css
+++ b/view/css/project/widget/messages.css
@@ -76,3 +76,7 @@ div.project-messages div.message .actions a:hover,
 div.project-messages div.child .actions a:hover {
     color: #58595b;
 }
+
+
+div.project-messages div.message h3.user a{text-decoration:none;}
+div.project-messages div.message h3.user a:hover{color:#20B3B2;}
