--- a/view/css/project/edit.css
+++ b/view/css/project/edit.css
@@ -177,3 +177,9 @@ body.project-edit div.superform li.element#footer li#buttons button {
     -moz-box-shadow: 2px 2px 0 rgba(0,0,0,.2);    
     -webkit-box-shadow: 2px 2px 0 rgba(0,0,0,.2);
 }
+
+
+/* = lista de errores
+************************************************/
+ul.sf-footer-errors{}
+ul.sf-footer-errors li{ list-style-image:url(bg-li-error.png);}
