* usuarios ocultos no aparecen como sharemates, ni cofinanciadores ni se puede ir a su perfil, ni mensajes ni comentarios * estilos al listado de errores * maquetacion de gestion de retornos en dashboard (en curso) * valores por defecto en los campos sociales del perfil de usuario

--- a/view/css/common.css
+++ b/view/css/common.css
@@ -321,3 +321,9 @@ ul.navi li.next.active a {
 	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 /** fin navi box&arrows**/
+
+/* = caja de comentarios
+*************************/
+div.widget.blog-comment{position:relative;}
+div.widget.blog-comment button.green{float:right}
+div.widget.blog-comment div#bocadillo{background:url(bocadillo.jpg) no-repeat;position:absolute;width:56px;	height:51px;}
