--- a/view/css/dashboard/view.css
+++ b/view/css/dashboard/view.css
@@ -186,3 +186,76 @@ body.dashboard div#main div.post span {
     font-weight: normal;
     font-size: 10px;
 }
+
+body.dashboard div#main div.widget.projects div.message{background:url("/view/css/project/view/invest/header_beak.png") #CCE5E6 no-repeat left bottom; color:#58595B;padding:20px 20px 30px 20px; height:auto;overflow:auto;}
+
+body.dashboard div.widget.projects h2.title{font-size:14pt;font-weight:normal;margin-bottom:5px;}
+body.dashboard div.widget.projects label#invests-filter,body.dashboard div.widget.projects ul{float:left;}
+body.dashboard div.widget.projects label#invests-filter{font-size:9pt;}
+body.dashboard div.widget.projects div.invests-list{clear:both}
+body.dashboard div.widget.projects div.filters{height:auto;overflow:auto}
+body.dashboard div.widget.projects div.filters ul{list-style:none;clear:right;margin-top:0;margin-left:10px;padding-left:0;}
+body.dashboard div.widget.projects div.filters ul li{display:inline-block;}
+body.dashboard div.widget.projects div.filters ul li a{text-decoration:none;font-size:9pt;}
+body.dashboard div.widget.projects div.filters ul li.current a{background:url(../arrow-down.png) no-repeat left;padding-left:15px;}
+body.dashboard div.widget.projects div.filters ul li a:hover{color:#20B3B2;}
+
+
+body.dashboard div#invests-list div.investor{border-bottom:#C1C1C1 1px solid;margin:20px 20px 20px 80px;height:auto;overflow:auto;padding-bottom:10px;margin-bottom:10px;}
+body.dashboard div#invests-list div.investor div.left{float:left;margin-right:10px;font-size:9pt;}
+
+body.dashboard div#invests-list div.investor div.left span{display:block;}
+body.dashboard div#invests-list div.investor div.left span.username{margin-bottom:2px}
+body.dashboard div#invests-list div.investor div.left span.username a{color: #58595B;font-size: 9pt;font-weight: bold;text-decoration: none;}
+body.dashboard div#invests-list div.investor div.left span.amount{display:inline-block;background: url("../euro/violet/m.png") no-repeat scroll right center transparent;clear: left;color: #96238F;font-size: 11pt;font-weight: bold;line-height: 25px;padding-right: 30px;width: auto;}
+body.dashboard div#invests-list div.investor div.left label.amount,
+body.dashboard div#invests-list div.investor div.left span.date{display:block;color:#223E98;font-size:8pt;padding-left:0;width:100%}
+body.dashboard div#invests-list div.investor div.left span.status{text-transform:uppercase}
+body.dashboard div#invests-list div.investor div.left span.cumplida{}
+body.dashboard div#invests-list div.investor div.left span.pendiente{color:#f00;}
+
+
+/* Custom checkbox in investors list*/
+body.dashboard div#invests-list div.investor div.recompensas input[type="checkbox"]{height:16px;width:16px;float:left;position:absolute;left:0;opacity:0;margin:0;padding:0}
+body.dashboard div#invests-list div.investor div.recompensas label{float:left;line-height:16px;padding:0 0 0 30px}
+body.dashboard div#invests-list div.investor div.recompensas input + label{background:url(gr_custom-inputs.png) 0 -1px no-repeat;height:16px}
+body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:checked + label{background-position:0 -81px}
+body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:hover:checked + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:focus:checked + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:checked + label:hover,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:focus:checked + label{background-position:0 -101px}
+
+body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:hover + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:focus + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox] + label:hover{background-position:0 -21px}
+
+body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:active + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox] + label:hover:active{background-position:0 -41px}
+
+body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:active:checked + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:checked + label:hover:active{background-position:0 -121px}
+
+body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:disabled + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:hover:disabled + label,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:focus:disabled + label,input[type=checkbox]:disabled + label:hover,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:disabled + label:hover:active{background-position:0 -61px}
+input[type=checkbox]:disabled:checked + label,input[type=checkbox]:hover:disabled:checked + label,input[type=checkbox]:focus:disabled:checked + label,input[type=checkbox]:disabled:checked + label:hover,body.dashboard div#invests-list div.investor div.recompensas input[type=checkbox]:disabled:checked + label:hover:active{background-position:0 -141px}
+
+
+/* Custom checkbox in comment box*/
+body.dashboard div#colective-messages input[type="checkbox"]{height:16px;width:16px;float:left;position:absolute;left:0;opacity:0;margin:0;padding:0}
+body.dashboard div#colective-messages label{float:left;line-height:16px;padding:0 0 0 25px; margin-right:45px;}
+body.dashboard div#colective-messages input + label{background:url(gr_custom-inputs2.png) 0 -1px no-repeat;height:16px}
+body.dashboard div#colective-messages input[type=checkbox]:checked + label{background-position:0 -81px}
+body.dashboard div#colective-messages input[type=checkbox]:hover:checked + label,body.dashboard div#colective-messages input[type=checkbox]:focus:checked + label,body.dashboard div#colective-messages input[type=checkbox]:checked + label:hover,body.dashboard div#colective-messages input[type=checkbox]:focus:checked + label{background-position:0 -101px}
+
+body.dashboard div#colective-messages input[type=checkbox]:hover + label,body.dashboard div#colective-messages input[type=checkbox]:focus + label,body.dashboard div#colective-messages input[type=checkbox] + label:hover{background-position:0 -21px}
+
+body.dashboard div#colective-messages input[type=checkbox]:active + label,body.dashboard div#colective-messages input[type=checkbox] + label:hover:active{background-position:0 -41px}
+
+body.dashboard div#colective-messages input[type=checkbox]:active:checked + label,body.dashboard div#colective-messages input[type=checkbox]:checked + label:hover:active{background-position:0 -121px}
+
+body.dashboard div#colective-messages input[type=checkbox]:disabled + label,body.dashboard div#colective-messages input[type=checkbox]:hover:disabled + label,body.dashboard div#colective-messages input[type=checkbox]:focus:disabled + label,input[type=checkbox]:disabled + label:hover,body.dashboard div#colective-messages input[type=checkbox]:disabled + label:hover:active{background-position:0 -61px}
+input[type=checkbox]:disabled:checked + label,input[type=checkbox]:hover:disabled:checked + label,input[type=checkbox]:focus:disabled:checked + label,input[type=checkbox]:disabled:checked + label:hover,body.dashboard div#colective-messages input[type=checkbox]:disabled:checked + label:hover:active{background-position:0 -141px}
+
+
+body.dashboard div#colective-messages  div#checks{height:auto;overflow:auto;margin: 0 0 25px 25px;}
+body.dashboard div#colective-messages  div#comment{width:657px;margin-left:20px;}
+
+body.dashboard div#colective-messages  div#checks p{height: auto;line-height: 20px;margin-bottom: 3px;overflow: auto;}
+
+/*comment box*/
+body.dashboard div#colective-messages div#bocadillo{background: url(../bocadillo.jpg) no-repeat scroll 0 0 transparent;height: 51px;position: absolute;width: 56px;}
+body.dashboard div#colective-messages textarea{background-color: #DCEEDF;border: 1px solid #2EAB58;clear: right;display: block;float: left;margin: -1px;margin-left:55px;height: 50px;padding: 0.3em 0;resize: none;width: 600px;}
+body.dashboard div#colective-messages a.preview{clear: left;color: #2EAB58;float: left;font-weight: bold;left: 52px;position: relative;text-decoration: none;text-transform: uppercase;top: 10px;}
+body.dashboard div#colective-messages button{font-weight: bold;padding: 5px 20px;float: right;margin-top:20px;}
