--- a/view/css/dashboard/view.css
+++ b/view/css/dashboard/view.css
@@ -189,6 +189,23 @@ body.dashboard div#main div.post span {
 
 body.dashboard div#main div.widget.projects div.message{background:url("/view/css/project/view/invest/header_beak.png") #CCE5E6 no-repeat left bottom; color:#58595B;padding:20px 20px 30px 20px; height:auto;overflow:auto;}
 
+
+/* = recompensas
+***************************/
+body.dashboard div#main div.widget.projects div.rewards{height:auto;overflow:auto;margin-top:10px;}
+body.dashboard div#main div.widget.projects div.reward{background:#E4C9E2;width:197px;min-height:175px;padding:10px;margin-right:10px;float:left;position:relative;margin-bottom:10px;}
+body.dashboard div#main div.widget.projects div.reward.last{margin-right:0;}
+body.dashboard div#main div.widget.projects div.reward span.orden{color:#fff;display:inline-block;font-weight:bold;font-size:13pt;}
+body.dashboard div#main div.widget.projects div.reward span.aporte{color: #96238F;display: inline-block;font-size: 9pt;text-transform: uppercase;line-height:22px;}
+body.dashboard div#main div.widget.projects div.reward span.num{font-size:12pt;}
+body.dashboard div#main div.widget.projects div.reward span.aporte > span.euro{ background:url(../euro/violet/m.png) no-repeat; height:20px; width:20px;display:inline-block;}
+body.dashboard div#main div.widget.projects div.reward span.cofinanciadores{color:#40509F;display:block;text-transform:uppercase;margin-left:25px;font-size:9pt;line-height:22px;}
+body.dashboard div#main div.widget.projects div.reward span.tiporec{display:block;border-bottom:#8D878E 1px solid;padding-bottom:5px;margin-bottom:5px;}
+body.dashboard div#main div.widget.projects div.reward span.recompensa{color:#8D878E;}
+body.dashboard div#main div.widget.projects div.reward a.green{position:absolute;bottom:5px;left:13px;width:160px}
+
+/* = gestionar retornos 
+***************************/
 body.dashboard div.widget.projects h2.title{font-size:14pt;font-weight:normal;margin-bottom:5px;}
 body.dashboard div.widget.projects label#invests-filter,body.dashboard div.widget.projects ul{float:left;}
 body.dashboard div.widget.projects label#invests-filter{font-size:9pt;}
