Glosario * estructura * modelo, vista, controlador * admin y traduccion * estilos * arreglos

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -10,6 +10,7 @@
 @import url('review.css');
 @import url('project.css');
 @import url('user.css');
+@import url('glossary.css');
 @import url('faq.css');
 @import url('blog.css');
 @import url('news.css');
