--- a/view/css/header.css
+++ b/view/css/header.css
@@ -116,7 +116,7 @@ div#sub-header > div > div.slides_container > div.slides_control > div.subhead-b
 
 div#sub-header > div > div.slides_container > div.slides_control > div.subhead-banner .shb-img{
 	margin:0px;
-	background: url('header/banners/test-banner-home.jpg') scroll no-repeat  0 0;
+/*	background: url('header/banners/test-banner-home.jpg') scroll no-repeat  0 0; */
 	height:156px;
 }
 
