--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -17,6 +17,7 @@
 @import url('discover.css');
 @import url('tipsy/tipsy.css');
 @import url('about.css');
+@import url('feed.css');
 
 div#sub-header > div,
 div#sub-header-secondary > div {
